kubernetes-manifests/backend-ingress/backend-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: backend-ingress
#   namespace: three-tier
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
# spec:
#   ingressClassName: alb
#   rules:
#     - host: api.dovz.shop
#       http:
#         paths:
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: api
#                 port:
#                   number: 8000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: three-tier
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 35.154.221.90
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
